<resources>
    <string name="Rs">₹ %s</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="active">Active</string>
    <string name="amount">Amount</string>
    <string name="amount_">Amount :</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">PhonePe Offline Simulator</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_to_set_template">Are you sure you want to set \"%s\" template?</string>
    <string name="autopay_cancel_in_progress">AutoPay cancel in progress</string>
    <string name="autopay_cancelled">AutoPay cancelled</string>
    <string name="autopay_created_successful">AutoPay created successfully</string>
    <string name="autopay_debit_successful">AutoPay debit successful</string>
    <string name="autopay_expired">AutoPay expired</string>
    <string name="autopay_failed">AutoPay has failed</string>
    <string name="autopay_in_progress">AutoPay in progress</string>
    <string name="autopay_paused">AutoPay has been paused</string>
    <string name="autopay_pending">AutoPay is pending</string>
    <string name="autopay_revoke_in_progress">AutoPay revoke in progress</string>
    <string name="autopay_revoked">AutoPay has been revoked</string>
    <string name="balances_from_upi_lite_phonepe_wallet_cashback_amp_gift_vouchers_is_being_used_for_this_payment">Balances from UPI Lite, PhonePe Wallet, Cashback &amp; Gift Vouchers is being used for this payment</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="change_flow">Change Flow</string>
    <string name="change_template_flow">Change Template Flow</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checking_collect_requests">Checking Collect Requests …</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="collect_requests">Fetch Collect</string>
    <string name="colon">:</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">e8845ebb397f41d9bc4e8941d4aa32f4</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="configure_merchant">Configure Merchant</string>
    <string name="confirm_vpa">Confirm VPA</string>
    <string name="connecting_securely">Connecting Securely</string>
    <string name="copy">Copy</string>
    <string name="current_templates">Configured templates for test cases</string>
    <string name="currently_configured_template">Currently configured template</string>
    <string name="debit_from">Debit From</string>
    <string name="decline">DECLINE</string>
    <string name="default_web_client_id">196962130481-rc6bjr30oq3rtt5qa132u5toj2d3ducb.apps.googleusercontent.com</string>
    <string name="define_zxingandroidembedded" />
    <string name="dest_title">destination title</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_upi_pin">Enter UPI PIN</string>
    <string name="enter_vpa">Enter VPA</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fetching_mandates">"Please wait,
Fetching Your Subscriptions!"</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_">Frequency :</string>
    <string name="gcm_defaultSenderId">196962130481</string>
    <string name="get_configured_templates">Get Configured Templates</string>
    <string name="google_api_key">AIzaSyBjROs8rf6se_-mKtSy1AT7YjVMme5SiPY</string>
    <string name="google_app_id">1:196962130481:android:61b7187a5e7699237e9310</string>
    <string name="google_crash_reporting_api_key">AIzaSyBjROs8rf6se_-mKtSy1AT7YjVMme5SiPY</string>
    <string name="google_storage_bucket">phonepe-simulator.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="how_to_use_test_case_configuration">How to use test case configuration?</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_future_if_you_want_to_change_vpa_you_can_change_it_from_settings">You can change VPA from Settings.</string>
    <string name="invalid_intent_url">Invalid Intent URL: %s</string>
    <string name="invalid_intent_url_2">Invalid Intent URL</string>
    <string name="item_view_role_description">Tab</string>
    <string name="last_autopay_debit_made_on" formatted="false">Last autopay debit made on %1s of ₹ %2s</string>
    <string name="library_zxingandroidembedded_author">JourneyApps</string>
    <string name="library_zxingandroidembedded_authorWebsite">https://journeyapps.com/</string>
    <string name="library_zxingandroidembedded_isOpenSource">true</string>
    <string name="library_zxingandroidembedded_libraryDescription">Barcode scanning library for Android, using ZXing for decoding.</string>
    <string name="library_zxingandroidembedded_libraryName">ZXing Android Embedded</string>
    <string name="library_zxingandroidembedded_libraryVersion" />
    <string name="library_zxingandroidembedded_libraryWebsite">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="library_zxingandroidembedded_licenseId">apache_2_0</string>
    <string name="library_zxingandroidembedded_repositoryLink">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="list_all_templates">List All Templates</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="mandate_support">mandate</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="pay">Pay</string>
    <string name="pref_key_app_version">version</string>
    <string name="pref_key_delay">delay</string>
    <string name="pref_key_environment">environment</string>
    <string name="pref_key_vpa">VPA</string>
    <string name="requested_by">Requested by</string>
    <string name="set_template">Configure Template</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="subscription_list">Subscriptions</string>
    <string name="template_info">Template Info</string>
</resources>